k8s/demo/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-submitter
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: job-submitter
  template:
    metadata:
      labels:
        app: job-submitter
    spec:
      containers:
        - name: app
          image: ghcr.io/northo/k8s-webserver-with-inference-job-demo:sha-4825d89
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
