k8s/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: demo
spec:
  selector:
    app: demo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
